--- a/gb/19/5/29/n11287308.md
+++ b/gb/19/5/29/n11287308.md
@@ -1,54 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/szzd3/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/szzd3/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/szzd3/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/szzd3/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/szzd3/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/szzd3/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/szzd3/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/szzd3/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/szzd3/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/szzd3/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/szzd3/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÖÜÌÀºÀ°¾°ëÄê·õ´´×÷ ±§²¡¡°³ö¹Ø¡±Ï×³ª</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/05/1905290555281487-600x400.jpg" />
-<h6>ÖÜÌÀºÀ£¨ÖÐ£©³Á¼ÅÁË°ëÄêÃ¦´´×÷£¬5ÔÂ28ÈÕÑ¡ÔñÔÚÌ¨ÖÐ·ê¼×´óÑ§±ÏÒµÍí»á¡°³ö¹Ø¡±Ï×³ª¡££¨Ë÷ÄáÒôÀÖÌá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/xcbfpq327/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å‘¨æ±¤è±ªç†¬åŠå¹´å­µåˆ›ä½œ æŠ±ç—…â€œå‡ºå…³â€çŒ®å”±</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/1905290555281487-600x400.jpg" />
+<h6>å‘¨æ±¤è±ªï¼ˆä¸­ï¼‰æ²‰å¯‚äº†åŠå¹´å¿™åˆ›ä½œï¼Œ5æœˆ28æ—¥é€‰æ‹©åœ¨å°ä¸­é€¢ç”²å¤§å­¦æ¯•ä¸šæ™šä¼šâ€œå‡ºå…³â€çŒ®å”±ã€‚ï¼ˆç´¢å°¼éŸ³ä¹æä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê05ÔÂ29ÈÕÑ¶¡¿ÒÔº»Çú¡¶<a href="https://github.com/szzd3/djy/blob/master/gb/tag/%E5%B8%85%E5%88%B0%E5%88%86%E6%89%8B.md">Ë§µ½·ÖÊÖ</a>¡·ÓÂÆÆ1ÒÚYouTube¹Û¿´´ÎÊýµÄ<a href="https://github.com/szzd3/djy/blob/master/gb/tag/%E5%91%A8%E6%B1%A4%E8%B1%AA.md">ÖÜÌÀºÀ</a>£¬ÎªÁËÖÆ×÷ÐÂ×¨¼­³Á¼Å°ëÄê£¬Òò´ËÍÆµôÇ§ÍòÔª£¨Ì¨±Ò£©µÄ´úÑÔ¡£¼ÌÈ¥ÄêÄêµ×Ñ¹ÖáÔÚ¸ßÐÛÑÝ³ª¿çÄêÖ®ºó£¬Ê±¸ô°ëÄê£¬Ëû×òÍí£¨28£©ÈÕÑ¡ÔñÔÚÌ¨ÖÐ·ê¼×´óÑ§±ÏÒµÍí»á¡°³ö¹Ø¡±Ï×³ª¡£</p>
-<figure id="attachment_11287340" style="width: 600px" class="wp-caption aligncenter"><a href="http://i.epochtimes.com/assets/uploads/2019/05/1905290555321487.jpg"><img class="size-large wp-image-11287340" title="" src="http://i.epochtimes.com/assets/uploads/2019/05/1905290555321487-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text"><a href="https://github.com/szzd3/djy/blob/master/gb/tag/%E5%91%A8%E6%B1%A4%E8%B1%AA.md">ÖÜÌÀºÀ</a>£¨ÖÐ£©ËäÈ»±§²¡ÑÝ³ª£¬´óÑ§Ñ§×ÓÒ²ÈÈÇé»ØÓ¦£¬È«³¡Æø·ÕÈÈÁÒ¡££¨Ë÷ÄáÒôÀÖÌá¹©£©</figcaption></figure>
-<p>ËäÈ»Ëû¸ÐÃ°ÉíÌå²»ÊÊ£¬½ö´òÒ»Õë±ã±§²¡ÉÏ³¡£¬¼á³ÖÒÔÂôÁ¦µÄÑÝ³ö´ðÐ»³¤ÆÚÒÔÀ´×îÖ§³ÖËûµÄÄêÇáÑ§×ÓÃÇ¡£ËûËµ£º¡°ºÜÏëÄîÇ°½øÐ£Ô°±íÑÝ£¬ËùÒÔÌØ±ð°²ÅÅ£¬½á¹û×òÍíºíÁü·¢Ñ×¡¢ÉÕÉù£¬µ«»¹ÊÇÈ«Á¦Õ¨Ò»²¨£¬Ï£ÍûÌ¨ÖÐ·ê¼×´óÑ§µÄ±ÏÒµÉú½ñÍíÍæµÄ¿ªÐÄ£¬×£¸£ÄãÃÇ£¬²»Òª·ÅÆúÃÎÏë£¬ÕÕ¹ËºÃÄãµÄÁé»ê£¡¡±</p>
-<p>´Ó3000ÈËµÄ¸öÈË³öµÀÑÝ³ª»á£¬Ò»Â·³ªµ½72ÍòÈË´óÐÍ¿çÄêÍí»á£¬²»ÂÛÊÇÈÎºÎÐÎÊ½µÄÑÝ³ö£¬ÖÜÌÀºÀ¶¼È«Á¦ÒÔ¸°¡£ËûÈÏÎª£¬ÔÚÎèÌ¨ÉÏ×îÂôÁ¦µÄÑÝ³ö£¬¾ÍÊÇ´ðÐ»¸èÃÔ×îºÃµÄ·½Ê½¡£µ«¼ÓÉÏ×î½üÃ¦ÓÚÐÂ×¨¼­µÄÂ¼ÖÆ£¬ÖÜÌÀºÀ½üÆÚÑ¹Á¦±¬Ôö¡£</p>
-<p>Ç°ÍíËûÍ»È»¸ÐÃ°¡¢ºíÁü·¢Ñ×£¬¸Ï½ôÈ¥¿´Ò½Éú£¬´òÁËÒ»ÕëÔÙ±§²¡ÉÏ³¡±íÑÝ£¬Õ¹ÏÖ¾´Òµ¾«Éñ¡£ÖÜÌÀºÀ±íÊ¾£º¡°ÎÒ±È½Ï×Å¼±ÊÇÒòÎªÒª±íÑÝ£¬ÆäÊµºÜÉúÆø×Ô¼ºÔÚÕâ¸öÊ±ºò×´Ì¬²»ºÃ£¡¡±×òÍí·ê¼×´óÑ§µÄÍ¬Ñ§Ò²ÈÈÇé»ØÓ¦£¬È«³¡Æø·ÕÈÈÁÒ£¬ÖÜÌÀºÀ»¹ÌøÏÂÎèÌ¨£¬¸úÃ¿Î»Í¬Ñ§¿ªÐÄÅÄÕÕ£¬Õ¹ÏÖÇ×ÃñµÄÒ»Ãæ¡£</p>
-<p>¹ýÈ¥°ëÄêÀ´£¬ÖÜÌÀºÀÑ¡Ôñ´ýÔÚÄ»ºó£¬³ýÁËÂ¼ÖÆ×Ô¼ºµÄÐÂ×¨¼­£¬»¹Õ¹¿ª¡°½Ó°¸ÈËÉú¡±£¬ËûÍ¸Â¶£º¡°ÎÒ×öÁËºÜ¶àÖÆ×÷°¸£¬ÏñÎÒ×Ô¼ºµÄ×¨¼­£¬´ÓÉè¼Æµ½Æ½Ãæ¡¢MV¡¢Æó»®µÈ£¬¶¼ÊÇÎÒÒ»ÊÖ°ü°ì¡£ÉõÖÁÕâ¼¸Äê£¬ÎÒÒ²°ïÅóÓÑµÄÆóÒµ×öÐÐÏú£¬ÎÒÂýÂý·¢ÏÖ£¬×Ô¼ºÔ½À´Ô½ÓÐ¾­Ñé£¬Ô­À´Ò²¿ÉÒÔ³¯Õâ¸ö·½Ïò·¢Õ¹¡£¡±</p>
-<p>ÖÁÓÚÎ´À´»á²»»á³ÉÁ¢×Ô¼ºµÄ¹«Ë¾»òÆ·ÅÆ£¿ÖÜÌÀºÀÏÈÂô¸ö¹Ø×Ó£¬Ö»Í¸Â¶ºÜ¿ì¾Í»áÓÐÐÂ×÷Æ·ÍÆ³ö£¬Çë¸èÃÔÅóÓÑÊÃÄ¿ÒÔ´ý¡£</p>
-<p>ÔðÈÎ±à¼­£ºÁºÃÎÖñ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´05æœˆ29æ—¥è®¯ã€‘ä»¥å¤¯æ›²ã€Š<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E5%B8%85%E5%88%B0%E5%88%86%E6%89%8B.md#1">å¸…åˆ°åˆ†æ‰‹</a>ã€‹å‹‡ç ´1äº¿YouTubeè§‚çœ‹æ¬¡æ•°çš„<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E5%91%A8%E6%B1%A4%E8%B1%AA.md#1">å‘¨æ±¤è±ª</a>ï¼Œä¸ºäº†åˆ¶ä½œæ–°ä¸“è¾‘æ²‰å¯‚åŠå¹´ï¼Œå› æ­¤æŽ¨æŽ‰åƒä¸‡å…ƒï¼ˆå°å¸ï¼‰çš„ä»£è¨€ã€‚ç»§åŽ»å¹´å¹´åº•åŽ‹è½´åœ¨é«˜é›„æ¼”å”±è·¨å¹´ä¹‹åŽï¼Œæ—¶éš”åŠå¹´ï¼Œä»–æ˜¨æ™šï¼ˆ28ï¼‰æ—¥é€‰æ‹©åœ¨å°ä¸­é€¢ç”²å¤§å­¦æ¯•ä¸šæ™šä¼šâ€œå‡ºå…³â€çŒ®å”±ã€‚</p>
+<figure id="attachment_11287340" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/05/1905290555321487.jpg"><img class="size-large wp-image-11287340" title="" src="https://i.epochtimes.com/assets/uploads/2019/05/1905290555321487-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E5%91%A8%E6%B1%A4%E8%B1%AA.md#1">å‘¨æ±¤è±ª</a>ï¼ˆä¸­ï¼‰è™½ç„¶æŠ±ç—…æ¼”å”±ï¼Œå¤§å­¦å­¦å­ä¹Ÿçƒ­æƒ…å›žåº”ï¼Œå…¨åœºæ°”æ°›çƒ­çƒˆã€‚ï¼ˆç´¢å°¼éŸ³ä¹æä¾›ï¼‰</figcaption></figure>
+<p>è™½ç„¶ä»–æ„Ÿå†’èº«ä½“ä¸é€‚ï¼Œä»…æ‰“ä¸€é’ˆä¾¿æŠ±ç—…ä¸Šåœºï¼ŒåšæŒä»¥å–åŠ›çš„æ¼”å‡ºç­”è°¢é•¿æœŸä»¥æ¥æœ€æ”¯æŒä»–çš„å¹´è½»å­¦å­ä»¬ã€‚ä»–è¯´ï¼šâ€œå¾ˆæƒ³å¿µå‰è¿›æ ¡å›­è¡¨æ¼”ï¼Œæ‰€ä»¥ç‰¹åˆ«å®‰æŽ’ï¼Œç»“æžœæ˜¨æ™šå–‰å’™å‘ç‚Žã€çƒ§å£°ï¼Œä½†è¿˜æ˜¯å…¨åŠ›ç‚¸ä¸€æ³¢ï¼Œå¸Œæœ›å°ä¸­é€¢ç”²å¤§å­¦çš„æ¯•ä¸šç”Ÿä»Šæ™šçŽ©çš„å¼€å¿ƒï¼Œç¥ç¦ä½ ä»¬ï¼Œä¸è¦æ”¾å¼ƒæ¢¦æƒ³ï¼Œç…§é¡¾å¥½ä½ çš„çµé­‚ï¼â€</p>
+<p>ä»Ž3000äººçš„ä¸ªäººå‡ºé“æ¼”å”±ä¼šï¼Œä¸€è·¯å”±åˆ°72ä¸‡äººå¤§åž‹è·¨å¹´æ™šä¼šï¼Œä¸è®ºæ˜¯ä»»ä½•å½¢å¼çš„æ¼”å‡ºï¼Œå‘¨æ±¤è±ªéƒ½å…¨åŠ›ä»¥èµ´ã€‚ä»–è®¤ä¸ºï¼Œåœ¨èˆžå°ä¸Šæœ€å–åŠ›çš„æ¼”å‡ºï¼Œå°±æ˜¯ç­”è°¢æ­Œè¿·æœ€å¥½çš„æ–¹å¼ã€‚ä½†åŠ ä¸Šæœ€è¿‘å¿™äºŽæ–°ä¸“è¾‘çš„å½•åˆ¶ï¼Œå‘¨æ±¤è±ªè¿‘æœŸåŽ‹åŠ›çˆ†å¢žã€‚</p>
+<p>å‰æ™šä»–çªç„¶æ„Ÿå†’ã€å–‰å’™å‘ç‚Žï¼Œèµ¶ç´§åŽ»çœ‹åŒ»ç”Ÿï¼Œæ‰“äº†ä¸€é’ˆå†æŠ±ç—…ä¸Šåœºè¡¨æ¼”ï¼Œå±•çŽ°æ•¬ä¸šç²¾ç¥žã€‚å‘¨æ±¤è±ªè¡¨ç¤ºï¼šâ€œæˆ‘æ¯”è¾ƒç€æ€¥æ˜¯å› ä¸ºè¦è¡¨æ¼”ï¼Œå…¶å®žå¾ˆç”Ÿæ°”è‡ªå·±åœ¨è¿™ä¸ªæ—¶å€™çŠ¶æ€ä¸å¥½ï¼â€æ˜¨æ™šé€¢ç”²å¤§å­¦çš„åŒå­¦ä¹Ÿçƒ­æƒ…å›žåº”ï¼Œå…¨åœºæ°”æ°›çƒ­çƒˆï¼Œå‘¨æ±¤è±ªè¿˜è·³ä¸‹èˆžå°ï¼Œè·Ÿæ¯ä½åŒå­¦å¼€å¿ƒæ‹ç…§ï¼Œå±•çŽ°äº²æ°‘çš„ä¸€é¢ã€‚</p>
+<p>è¿‡åŽ»åŠå¹´æ¥ï¼Œå‘¨æ±¤è±ªé€‰æ‹©å¾…åœ¨å¹•åŽï¼Œé™¤äº†å½•åˆ¶è‡ªå·±çš„æ–°ä¸“è¾‘ï¼Œè¿˜å±•å¼€â€œæŽ¥æ¡ˆäººç”Ÿâ€ï¼Œä»–é€éœ²ï¼šâ€œæˆ‘åšäº†å¾ˆå¤šåˆ¶ä½œæ¡ˆï¼Œåƒæˆ‘è‡ªå·±çš„ä¸“è¾‘ï¼Œä»Žè®¾è®¡åˆ°å¹³é¢ã€MVã€ä¼åˆ’ç­‰ï¼Œéƒ½æ˜¯æˆ‘ä¸€æ‰‹åŒ…åŠžã€‚ç”šè‡³è¿™å‡ å¹´ï¼Œæˆ‘ä¹Ÿå¸®æœ‹å‹çš„ä¼ä¸šåšè¡Œé”€ï¼Œæˆ‘æ…¢æ…¢å‘çŽ°ï¼Œè‡ªå·±è¶Šæ¥è¶Šæœ‰ç»éªŒï¼ŒåŽŸæ¥ä¹Ÿå¯ä»¥æœè¿™ä¸ªæ–¹å‘å‘å±•ã€‚â€</p>
+<p>è‡³äºŽæœªæ¥ä¼šä¸ä¼šæˆç«‹è‡ªå·±çš„å…¬å¸æˆ–å“ç‰Œï¼Ÿå‘¨æ±¤è±ªå…ˆå–ä¸ªå…³å­ï¼Œåªé€éœ²å¾ˆå¿«å°±ä¼šæœ‰æ–°ä½œå“æŽ¨å‡ºï¼Œè¯·æ­Œè¿·æœ‹å‹æ‹­ç›®ä»¥å¾…ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¢æ¢¦ç«¹</p>
+	
 <hr>
 
-#### Ô­ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/29/n11287308.htm">ÖÜÌÀºÀ°¾°ëÄê·õ´´×÷ ±§²¡¡°³ö¹Ø¡±Ï×³ª</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/3/24/n11135938.htm">¡°°ËÈýØ²¡±ÊÀ½çÑ²ÑÝ¿ªÅÜ ÖÜÌÀºÀÏ×´ú±í×÷Öú³ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/31/n10944162.htm">ÖÜÌÀºÀÁì¾üÖÚÐÇ¸ßÐÛ¿çÄê ÏÖ³¡±»ÃñÖÚ¼·±¬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/24/n10930340.htm">ÏÛÄ½ÖÜ¶­ÊÕÇ§ÍòÅÜ³µ ÖÜÌÀºÀÄêµ×ÔÚ¸ßÐÛ¿çÄê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/24/n10929911.htm">À¥ÁèËÍÖÜ¶­Ç§ÍòÅÜ³µ ÖÜÌÀºÀÏëÂò·É»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/4/n10690414.htm">ÒÔÐÂÈËÖ®×Ë²ÎÈü»ñ¸ßÆ± ÖÜÌÀºÀ·¢±íÐÂÇú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/5/2/n10354068.htm">ÖÜÌÀºÀ¸°Â½Ñ²ÑÝÁ½Í·ÉÕ Ò»ÌìÄÚÓÖ±äÉíDJµÇÌ¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/2/20/n10157491.htm">ÖÜÌÀºÀ¸°Å¦Ô¼¿´Ðã ÙÉÄ¸Í¬ÐÐ»¶ÀÖ¹ýÐÂÄê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/12/31/n10010203.htm">ÖÜÌÀºÀÓë±ÏÊé¾¡Í¬³¡¿çÄêÐã ÎÞÔµ¼ûµ½Rain</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/11/4/n9805400.htm">³ªÏì¡°»¨²©Ö®Ò¹¡± ÖÜÌÀºÀÐì¼ÑÓ¨µÈÈºÐÇ»ãÑÝ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/5/28/n11285752.htm">¡¾ÐÂÎÅ¿´µã¡¿Ã³Ò×Õ½¶ñ»¯ ÖÐ¹²Ã¦ÓÚÄÚ¶·ÎÞ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/28/n11286219.htm">ËïÐ¡¹ûÃâËÀ°¸·¢½Í ÆäÉú¸¸¾Ý´«ÊÇÇ°¾ü·½½«Áì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/28/n11285883.htm">±¸Ì¥±ä·ÏÌ¥ CEO£º»ªÎªº£ÍâÊÖ»úÒµÎñÒÑËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/28/n11283965.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºÀúÊ·¹Õµã Ï°Ó¦ÈçºÎÑ¡Ôñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/25/n11278979.htm">ÎÒµÄËãÃüÖ®Â· Å£µ¶³õÊÔ£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/21/n11130055.htm">¡¾ÏÍºó´«¡¿Å®ÈËµÄÈáÍñÊÇÒ»ÖÖÁ¦Á¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/22/n11273123.htm">ãë´¨µØÕðÉ½±ÀµØÁÑµÄÄÇÒ»¿Ì</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/9/29/n8348119.htm">¡¾Ç§¹ÅÓ¢ÐÛÈËÎï¡¿ÕÅÈý·á(9) ËÄÁ½²¦Ç§½ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/26/n11280952.htm">±±¾©ÑÝ³ª»áÔâ¼¤¹âÖ±Éä ²ÌÒÀÁÖ½ô±ÕË«ÑÛ±ÜÊÜÉË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11283316.htm">ÊÜÑûÔÚ°ÂË¹Â½ÂÛÌ³ÑÝ½² ºÎÔÏÊ«£ºÎÒÃÇÊÇÏã¸ÛÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/26/n11280842.htm">SanaÒòÕùÒéÊÂ¼þ¸ÐÊÜµ½ÔðÈÎ ÎªÊØ»¤·ÛË¿¶ø¼áÇ¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/26/n11281065.htm">ÕÂ×Óâù£ºµçÓ°ÖÐµÄ¼áÇ¿½ÇÉ«Õü¾ÈÁËÎÒ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11282950.htm">ÎåÔÂÌìÑÝ³ª»áµçÓ° È«ÇòÊ×ÖÜÆ±·¿Ö±±Æ1.9ÒÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11275546.htm">¡¾ÐÂÎÅ¿´µã¡¿»ªÎª×öÁËÊ²Ã´£¿ÃÀ¹ú´ÓÁ½Í··âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/28/n11285752.htm">¡¾ÐÂÎÅ¿´µã¡¿Ã³Ò×Õ½¶ñ»¯ ÖÐ¹²Ã¦ÓÚÄÚ¶·ÎÞ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/24/n11278165.htm">¡¾ÐÂÎÅ¿´µã¡¿´¨ÆÕ³Æ»ªÎªÎ£ÏÕ µ«¿ÉÄÉÈëÌ¸ÅÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11283734.htm">ÖÐ¹ú´óÂèÔÚ´óÂíÐÐÆ­ ±»ÃñÖÚ¡°´¦Ë½ÐÌ¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11283612.htm">ÃÀÖÐÅ®Ö÷²¥±çÂÛ CGTNµÄÁõÐÀÊÇÄÄ¹úÈË£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/27/n11283643.htm">·ÖÎö£º»ªÎªºèÃÉÓûÈ¡´úAndroid¼¸ÎÞÊ¤Ëã</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/11/4/n9805400.md#1">å”±å“â€œèŠ±åšä¹‹å¤œâ€ å‘¨æ±¤è±ªå¾ä½³èŽ¹ç­‰ç¾¤æ˜Ÿæ±‡æ¼”</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/12/31/n10010203.md#1">å‘¨æ±¤è±ªä¸Žæ¯•ä¹¦å°½åŒåœºè·¨å¹´ç§€ æ— ç¼˜è§åˆ°Rain</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/2/20/n10157491.md#1">å‘¨æ±¤è±ªèµ´çº½çº¦çœ‹ç§€ å•æ¯åŒè¡Œæ¬¢ä¹è¿‡æ–°å¹´</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/2/n10354068.md#1">å‘¨æ±¤è±ªèµ´é™†å·¡æ¼”ä¸¤å¤´çƒ§ ä¸€å¤©å†…åˆå˜èº«DJç™»å°</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÁÐ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=4&t=&d=https://github.com/szzd3/djy/blob/master/gb/19/5/29/n11287308.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/szzd3/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/szzd3/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/szzd3/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/szzd3/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/szzd3/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">æ–‡é©ä¸­è‡ªæ€çš„å‡ ä¸ªåäººï¼ˆ3ï¼‰çº¢å²©ä½œè€…ç½—å¹¿æ–Œ</a></li><li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">å…³æ³¨3äº¿äººä¸‰é€€</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">æ³•è½®åŠŸçœŸç›¸ä¼ å…¥å¤ªå¹³æ´‹çƒ­å¸¦å²›å›½ç“¦åŠªé˜¿å›¾</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/30/n12442859.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢5</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503625.md#1">éº¦å…‹é˜¿ç‘Ÿçš„æˆ˜åŽå²æœˆåŠä¸´ç»ˆå‰çš„é¢„è¨€</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/3/n12378228.md#1">æ˜Žæœç¥žå¥‡æ­Œè°£ å¯¥å¯¥æ•°è¯­ éšå«å¤©ä¸‹å˜å±€</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523568.md#1">è¢«é¢„è¨€é€‰ä¸­çš„äººï¼šå·æ™®å’Œæ›¹æ“</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12512315.md#1">åƒç½—å®‡è¿™æ ·çš„çº¢äºŒä»£</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å†³æˆ˜æ—¥å·æ™®èƒœç®—ï¼Ÿè¿žä»»æ–™æœ‰å¤§åŠ¨ä½œ</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525168.md#1">ã€çè¨€çœŸè¯­ã€‘è®°è€…å¿†é‡‡è®¿è¢«åˆºï¼šæŠ¥çœŸç›¸ä¸é€€ç¼©</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1">ã€æ€æƒ³é¢†è¢–ã€‘çº³ç“¦ç½—ï¼šç¾Žåª’æˆä¸­å…±â€œæœ‰ç”¨ç™½ç—´â€</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520354.md#1">ã€å›¾è§£ã€‘2020ç¾Žå›½å¤§é€‰ æŠ•ç¥¨ç»“æžœä½•æ—¶å‡º</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520247.md#1">åŽä¸ºå‰¯æ€»è£æ·±åœ³çŒæ­» æ›¾åœ¨ä¼¦æ•¦å½“è®°è€…</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å†³æˆ˜æ—¥å·æ™®èƒœç®—ï¼Ÿè¿žä»»æ–™æœ‰å¤§åŠ¨ä½œ</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525654.md#1">èŽ·èƒ¡æ­ŒæƒŠå–œæŽ¢ç­ å”å«£å®³ç¾žå°–å«ä¸€ç›´æ‚è„¸</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520465.md#1">ç™»å°çŒ®å”±è¢«æ‹æˆäº”äº”èº« æŽè£æµ©ï¼šè¿™è¿˜ç®—ä¸ªäººå—</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525868.md#1">èµµä¸½é¢–ä¸è¯†â€œå…°â€å­—æƒ¹è®® ä¸»æ’­å¸®åœ†åœºå´æ›´å°´å°¬</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522915.md#1">å¤«å¦»ä¿©æŒä¸åŒæ”¿è§ é»„ç§‹ç”Ÿæœ‰ä¸€å¥—ç›¸å¤„ä¹‹é“</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520656.md#1">é‚“è¶…ä¸Šç«èŽ·9å²å„¿æ”¯æ‹› ç½‘å‹ï¼šçˆ¶å­ä¼¼äº’æ¢è§’è‰²</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520245.md#1">ç½¹ç™ŒåŽå­˜æ´»50å¹´  å°å¤§åŒ»å¸ˆï¼šçˆ¬å±±æ˜¯ä¸€å¸–è‰¯è¯</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515130.md#1">è¿™äº›è”¬æžœæœ‰è‹¦å‘³åˆ«åƒ å¯è‡´ä¸­æ¯’ï¼è¯¯é£Ÿ3æ­¥å¤„ç†</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524129.md#1">è¢«å¯„å…»å°ç‹—èŠ±åŠä¸ªæœˆèµ°100å…¬é‡Œå›žå®¶æ‰¾ä¸»äºº</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520485.md#1">è¶³åº•ç­‹è†œç‚Ž4æ‹›æ”¹å–„ï¼ç—‡çŠ¶ã€æ²»ç–—å’Œå¤å¥å…¨å›¾è§£</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521919.md#1">ä¼ å·æ™®åŒæ„å‡ºå”®F-22æˆ˜æœºç»™ä»¥è‰²åˆ—</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/29/n11287308.htm">å‘¨æ±¤è±ªç†¬åŠå¹´å­µåˆ›ä½œ æŠ±ç—…â€œå‡ºå…³â€çŒ®å”±</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/19/5/29/n11287308.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
