--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/2020-10-28-mh-guangdong-ebao-2-600x400.png" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1" target="_blank">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br></h3>根据明慧网信息不完全统计，自1999年7月中共迫害法轮功以来，广东省参与迫害而遭厄运的至少有670人......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1" target="_blank">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br></h3>2020年6月18日，现居江苏省淮安市涟水县的河北省法轮功学员雷江......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-969527060-600x400-1-320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1" target="_blank">中共强停蚂蚁集团上市 国际投资者失去信心</a><br></h3>中国（中共）政府突然改变监管规则，在蚂蚁集团上市前夕叫停，国际金融......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" target="_blank">【大选更新11·5】胜负难分 美多处爆发抗议</a><br></h3>2020年的美国大选陷入困境，民主党候选人拜登的票数出现了戏剧性反......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" target="_blank">【大选更新11.5】胜负难分 美多处抗议</a><br></h3>2020年的美国大选陷入困境，民主党候选人拜登的票数出现了戏剧性反......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527014.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/09/1809262141442188-320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527014.md#1" target="_blank">筑商标护城河 海底捞1天申请177个相关商标</a><br></h3>四川海底捞餐饮股份有限公司（海底捞）日前申请了有关和“海底捞”相关......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RK5JC-320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527001.md#1" target="_blank">中共喉舌罕见批评特斯拉 引关注</a><br></h3>中共喉舌近日发文，罕见批美国电动汽车制造商特斯拉（Tesla），指......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/S__2736136-320x200.jpg" align ="left"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1" target="_blank">转发一个视频 辽宁访民姜家文被拘留10天</a><br></h3>辽宁在京访民姜家文因转发河北复员老兵打死截访者的视频，于10月19......<br><img align="bottom" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/ntdtv/time.gif">11月05日</td></tr>
