--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/xcbfpq327/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-320x200.jpg"><p align="center">【大选更新11.5】胜负难分 美多处抗议</p></a>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11.5】胜负难分 美多处抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-320x200.jpg"><p align="center">【大选更新11·5】胜负难分 美多处爆发抗议</p></a>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1" title="【大选更新11·5】胜负难分 美多处爆发抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229466940-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526625.md#1" title="【专访】两党人士批评美大选民调失准""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283442236-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526498.md#1" title="威斯康星州和密歇根州选票暴增的疑云""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/927ec0c1c89178ca576267ec9a657740-320x200.png">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526403.md#1" title="分析：中共为何把官员私藏禁书列为首罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/20201030054323632-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525819.md#1" title="加州选民彻夜盯票 发现诡异现象疑作弊""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/IMG_6918-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】川普宣布在宾州等三州获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527662.md#1">乔州大选: 16张选举人票给川普  参议院一席复选  众议员一席翻蓝</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527153.md#1">美国民众发现 密歇根去世30多年的人投票</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527662.md#1">乔州大选: 16张选举人票给川普  参议院一席复选  众议员一席翻蓝</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527153.md#1">美国民众发现 密歇根去世30多年的人投票</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12514711.md#1">麦塔斯：应对中共 国际移植协会需改七原则</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527489.md#1">美大选结果 台外交部：相信计票会顺利完成</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527489.md#1">美大选结果 台外交部：相信计票会顺利完成</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
@@ -31,18 +31,18 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524300.md#1">美州务卿：从未在大选投票日当晚得最终数据</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522533.md#1">马云被约谈后 蚂蚁集团中港股突然暂缓上市</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521384.md#1">盘点纽约统战组织(2)华美协进社与文化统战</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521031.md#1">【内幕】高校内部文件泄中共无自信</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523312.md#1">【图解】选前震撼弹 拜登电脑门事件簿</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520590.md#1">钟原：美大选关键时刻 中共党媒报导淡化处理</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520639.md#1">【独家】中领馆管控公派学者更多证据曝光</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520689.md#1">【远见快评】最后冲刺 川普人气爆棚 奥拜尴尬</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518713.md#1">【名家专栏】先知、国王、圣徒和叛徒</a><br>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515688.md#1">【独家】中共对一带一路留华学生大撒币</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,906,524 人
+!共 366,905,586 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -81,7 +81,6 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518574.md#1">中共为何强行火化他们的遗体（16）</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518949.md#1">悄悄通过验收 三峡工程验收委主任是谁？</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518877.md#1">【拍案惊奇】翻红加州？决战宾州 左媒撑川普</a><br>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515688.md#1">【独家】中共对一带一路留华学生大撒币</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517852.md#1">【一线采访】半月来疫情四起 大陆第二波？</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12518151.md#1">杨幂踩高跟鞋下楼梯 伸手扶男星扑空超尴尬</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12518017.md#1">生日蛋糕被嫌老派 38岁林依晨高EQ回应</a><br>
@@ -105,6 +104,7 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12513849.md#1">蓬佩奥访问越南 拟携手打造印太安全</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12513347.md#1">【一线采访】青岛再爆医院感染 护士先确诊</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12511850.md#1">【新闻看点】FBI斥中共在美猎狐 五中闭幕释信号</a><br>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12512090.md#1">明星追星 江疏影贺偶像玄彬获奖“实至名归”</a><br>
 <br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526965.md#1">转发一个视频 辽宁访民姜家文被拘留10天</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523613.md#1">邢鉴再揭信阳监狱黑幕 找牢头狱霸做假证</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521879.md#1">屡遭酷刑折磨 湖南法轮功学员张春秋再被冤判</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523701.md#1">访民北京乘公交车 遭乘务员通报警方截访</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517735.md#1">四川什邡警察骚扰老年法轮功学员 遭抵制</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-969527060-600x400-1-320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527233.md#1">中共强停蚂蚁集团上市 国际投资者失去信心</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527014.md#1">筑商标护城河 海底捞1天申请177个相关商标</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12526055.md#1">成交量下降 大陆楼市传统旺季平淡收官</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525751.md#1">华为又推新手机 网友：山寨iPhone 12</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524724.md#1">蚂蚁集团：不计息退回香港公开发售的申请股款</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526373.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526373.md#1">中国人翻墙观美选举 关切未来是否续施压中共</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525099.md#1">山东监狱系统曾爆疫情 王文杰等5人出庭受审</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525090.md#1">第三届进博会 习近平首次不出席开幕式</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524964.md#1">蔡英文：中国经济进转折期 密切观察未来走向</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524424.md#1">美国大选引发中国官方及民间关注</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524341.md#1">退休7年 山东潍坊副市长涉受贿罪被逮捕</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526291.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/dd9569c0610bb699eeaecc489e15644a-320x200.png"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526291.md#1">辽宁、内蒙古同日均出现三个太阳</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524903.md#1">陕西铜川煤矿发生疑似瓦斯突出事故 4死4失踪</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524821.md#1">新疆喀什中共肺炎单日新增病例数再现新高</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521703.md#1">兰州卫健委给布病患者发健康证明 市民不满</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521218.md#1">兰州化工厂闪爆后油罐起火 浓烟直冲天际</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521167.md#1">国家管网北海LNG接收站失火 致6死3重伤</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526731.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526731.md#1">内蒙古幼儿园教师给幼儿扎针 3人被批捕</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526544.md#1">每日三退声明精选（2020/11/04）</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523746.md#1">齐齐哈尔市场遭强拆 民众批政府违法</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521263.md#1">黑龙江现病死猪肉交易 涉事司机逃逸</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521225.md#1">每日三退声明精选（2020/11/02）</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519419.md#1">哈尔滨今年6万人被狗咬伤 狂犬疫苗告急</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524269.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/51e79b349dbd5a41127439c0769ad689-320x200.png"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12513016.md#1">中共称将建文化强国 网民：它懂什么叫文化？</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/27/n12506230.md#1">汤唯开工第一天 公婆带全家人送应援车</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/27/n12504862.md#1">西安大一新生军训猝死 家属讨说法反被威胁</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503856.md#1">高圆圆女儿抓周全场嗨翻 赵树海谈孙女眉飞色舞</a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a><br><br><p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515304.md#1">【内幕】经营中美关系？盘点纽约统战组织(上)</a><br>
