--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,11 +13,11 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12518740.md#1" title="【大选更新】川普宣布在宾州等三州获胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/TrumpBiden-1200x720-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525260.md#1" title="选情胶着 美关键摇摆州结果延迟 暂无赢家""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229454030-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xcbfpq327.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527139.md#1">专家：MQ-9B无人机创造台美协同作战空间</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527305.md#1">对抗大选舞弊 川普团队组成阵容强大律师团</a><br>
-:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1">【大选更新11.5】川普在内华达州提诉</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527139.md#1">专家：MQ-9B无人机创造台美协同作战空间</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527305.md#1">对抗大选舞弊 川普团队组成阵容强大律师团</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527098.md#1">【大选更新11.5】川普在内华达州提诉</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/22/n12494480.md#1">遭冤狱7年 高材生雷江涛再被构陷到检察院</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527662.md#1">乔州大选: 16张选举人票给川普  参议院一席复选  众议员一席翻蓝</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12523460.md#1">蚂蚁集团暂缓上市 分析：马云恐难翻身</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,913,362 人
+!共 366,914,772 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -55,7 +55,7 @@
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525453.md#1">【中共百种酷刑】性摧残（上）</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526451.md#1">网易严选宣布退出“双十一”购物节活动</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525523.md#1">李克强河南考察时 半空突传凄厉喊冤声</a><br>
-<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527153.md#1">美国民众发现 密歇根去世30多年的人投票</a><br>
+<a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12527153.md#1">美国民众发现 密歇根去世36年的人投票</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/29/n12510783.md#1">迫害法轮功 广东670人遭厄运 公安系统居多（1）</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/5/n12526176.md#1">蚂蚁集团暂缓上市 赵薇等明星被指亏大了</a><br>
 <a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a><br>
